# mukhtasar

./: LICENSE  README.md  pyproject.toml
docs/: index.html
examples/: basic_usage.py  kazima_integration.py
mukhtasar/: __init__.py  __main__.py  arabic.py  cli.py  display.py  rouge.py  summarizer.py  web.py
mukhtasar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_arabic.py  test_rouge.py  test_summarizer.py  test_web.py
