[project]
name = "mukhtasar"
version = "0.2.0"
description = "Arabic text summarizer CLI -- extractive summarization, offline, dialect-aware"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Musa the Carpenter" }]
readme = "README.md"
keywords = ["arabic", "summarization", "nlp", "cli", "text-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
mukhtasar = "mukhtasar.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
